migrate from google sheets to mongo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,36 +1,37 @@
 {
 	"cSpell.words": [
+		"akta",
+		"alamat",
+		"anak",
+		"asal",
+		"bulanan",
+		"jenis",
 		"Jurusan",
 		"kebutuhan",
-		"Khusus",
-		"Lengkap",
-		"pilihan",
-		"punya",
-		"siswa",
-		"wali",
-		"nisn",
-		"lahir",
 		"kepercayaan",
-		"kode",
-		"moda",
-		"transportasi",
-		"rumah",
-		"anak",
-		"telpon",
-		"jenis",
-		"pendaftaran",
-		"sekolah",
-		"bulanan",
-		"asal",
-		"pekerjaan",
-		"alamat",
-		"penghasilan",
-		"tahun",
-		"pendidikan",
 		"kewarganegaraan",
-		"tinggal",
+		"Khusus",
+		"kode",
+		"lahir",
+		"Lengkap",
+		"moda",
+		"nisn",
+		"pekerjaan",
+		"pendaftaran",
+		"pendidikan",
+		"penghasilan",
+		"pilihan",
+		"ppdb",
+		"punya",
+		"rumah",
+		"sekolah",
+		"siswa",
+		"tahun",
 		"tanggal",
-		"akta",
+		"telpon",
 		"tempat",
+		"tinggal",
+		"transportasi",
+		"wali"
 	]
 }
