--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,9 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
+      "@server": [
+        "./server"
+      ],
       "@components": [
         "./components"
       ],
