form data siswa

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,69 @@
 		"tempat",
 		"tinggal",
 		"transportasi",
-		"wali"
+		"wali",
+		"adat",
+		"aktif",
+		"angkutan",
+		"asing",
+		"asrama",
+		"asuhan",
+		"autis",
+		"belajar",
+		"berkebutuhan",
+		"bersama",
+		"budha",
+		"hiper",
+		"jalan",
+		"jemputan",
+		"jika",
+		"katholik",
+		"keberapa",
+		"kelamin",
+		"kendaraan",
+		"kesulitan",
+		"ketergantungan",
+		"khonghucu",
+		"lainnya",
+		"laki",
+		"laki",
+		"negara",
+		"netra",
+		"nomor",
+		"obat",
+		"ojek",
+		"panti",
+		"perempuan",
+		"pribadi",
+		"protestan",
+		"rungu",
+		"sindrome",
+		"tidak",
+		"tradisi",
+		"umum",
+		"wicara",
+		"bambang",
+		"bekerja",
+		"besar",
+		"bulan",
+		"buruh",
+		"dari",
+		"handphone",
+		"juta",
+		"karyawan",
+		"kecil",
+		"kurang",
+		"lebih",
+		"ortu",
+		"pedagang",
+		"pensiunan",
+		"petani",
+		"peternak",
+		"polri",
+		"putus",
+		"sederajat",
+		"swasta",
+		"wiraswasta",
+		"wirausaha"
 	]
 }
