--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -95,6 +95,30 @@
 		"sederajat",
 		"swasta",
 		"wiraswasta",
-		"wirausaha"
+		"wirausaha",
+		"penerimaan",
+		"peserta",
+		"didik",
+		"baru",
+		"registrasi",
+		"pindahan",
+		"kembali",
+		"bersekolah",
+		"kompetensi",
+		"keahlian",
+		"dipilih",
+		"akuntansi",
+		"keuangan",
+		"lembaga",
+		"desain",
+		"grafis",
+		"teknik",
+		"komputer",
+		"jaringan",
+		"teknik",
+		"ringan",
+		"otomotif",
+		"calon",
+		"kandung"
 	]
 }
