--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recoil": "^0.7.4",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
