--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,124 +1,133 @@
 {
 	"cSpell.words": [
+		"adat",
 		"akta",
+		"aktif",
+		"akuntansi",
 		"alamat",
 		"anak",
-		"asal",
-		"bulanan",
-		"jenis",
-		"Jurusan",
-		"kebutuhan",
-		"kepercayaan",
-		"kewarganegaraan",
-		"Khusus",
-		"kode",
-		"lahir",
-		"Lengkap",
-		"moda",
-		"nisn",
-		"pekerjaan",
-		"pendaftaran",
-		"pendidikan",
-		"penghasilan",
-		"pilihan",
-		"ppdb",
-		"punya",
-		"rumah",
-		"sekolah",
-		"siswa",
-		"tahun",
-		"tanggal",
-		"telpon",
-		"tempat",
-		"tinggal",
-		"transportasi",
-		"wali",
-		"adat",
-		"aktif",
+		"Anda",
 		"angkutan",
+		"asal",
 		"asing",
 		"asrama",
 		"asuhan",
 		"autis",
+		"bambang",
+		"baru",
+		"bekerja",
 		"belajar",
 		"berkebutuhan",
 		"bersama",
+		"bersekolah",
+		"besar",
+		"bisa",
 		"budha",
+		"bulan",
+		"bulanan",
+		"buruh",
+		"calon",
+		"dari",
+		"desain",
+		"Dewantara",
+		"didik",
+		"dihubungi",
+		"dipilih",
+		"grafis",
+		"handphone",
 		"hiper",
 		"jalan",
+		"jaringan",
 		"jemputan",
+		"jenis",
 		"jika",
+		"Jurusan",
+		"juta",
+		"kandung",
+		"karyawan",
 		"katholik",
+		"keahlian",
 		"keberapa",
+		"kebutuhan",
+		"kecil",
 		"kelamin",
+		"kembali",
 		"kendaraan",
+		"kepercayaan",
 		"kesulitan",
 		"ketergantungan",
+		"keuangan",
+		"kewarganegaraan",
 		"khonghucu",
+		"Khusus",
+		"kode",
+		"kompetensi",
+		"komputer",
+		"kontak",
+		"kurang",
+		"lahir",
 		"lainnya",
 		"laki",
-		"laki",
+		"lebih",
+		"lembaga",
+		"Lengkap",
+		"memperoleh",
+		"moda",
 		"negara",
 		"netra",
+		"nisn",
 		"nomor",
 		"obat",
 		"ojek",
-		"panti",
-		"perempuan",
-		"pribadi",
-		"protestan",
-		"rungu",
-		"sindrome",
-		"tidak",
-		"tradisi",
-		"umum",
-		"wicara",
-		"bambang",
-		"bekerja",
-		"besar",
-		"bulan",
-		"buruh",
-		"dari",
-		"handphone",
-		"juta",
-		"karyawan",
-		"kecil",
-		"kurang",
-		"lebih",
 		"ortu",
+		"otomotif",
+		"panti",
 		"pedagang",
+		"pekerjaan",
+		"pendaftaran",
+		"pendidikan",
+		"penerimaan",
+		"penghasilan",
 		"pensiunan",
+		"perempuan",
+		"peserta",
 		"petani",
 		"peternak",
-		"polri",
-		"putus",
-		"sederajat",
-		"swasta",
-		"wiraswasta",
-		"wirausaha",
-		"penerimaan",
-		"peserta",
-		"didik",
-		"baru",
-		"registrasi",
+		"pilihan",
 		"pindahan",
-		"kembali",
-		"bersekolah",
-		"kompetensi",
-		"keahlian",
-		"dipilih",
-		"akuntansi",
-		"keuangan",
-		"lembaga",
-		"desain",
-		"grafis",
-		"teknik",
-		"komputer",
-		"jaringan",
-		"teknik",
+		"polri",
+		"ppdb",
+		"pribadi",
+		"protestan",
+		"punya",
+		"putus",
+		"registrasi",
 		"ringan",
-		"otomotif",
-		"calon",
-		"kandung"
+		"rumah",
+		"rungu",
+		"sederajat",
+		"sekolah",
+		"sindrome",
+		"siswa",
+		"socmed",
+		"sosial",
+		"swasta",
+		"tahun",
+		"tanggal",
+		"teknik",
+		"telepon",
+		"telp",
+		"telpon",
+		"teman",
+		"tempat",
+		"tidak",
+		"tinggal",
+		"tradisi",
+		"transportasi",
+		"umum",
+		"wali",
+		"wicara",
+		"wiraswasta",
+		"wirausaha"
 	]
 }
