--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "^0.7.4",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "11.1.2",
@@ -25,6 +26,7 @@
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/styled-components": "^5.1.25",
+    "@types/uuid": "8.3.2",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "eslint": "^7.32.0",
