show data siswa & set editable

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -128,6 +128,12 @@
 		"wali",
 		"wicara",
 		"wiraswasta",
-		"wirausaha"
+		"wirausaha",
+		"myusername",
+		"tandai",
+		"awal",
+		"untuk",
+		"pertama",
+		"menentukan"
 	]
 }
