login register show data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
 		"asrama",
 		"asuhan",
 		"autis",
+		"awal",
 		"bambang",
 		"baru",
 		"bekerja",
@@ -33,6 +34,7 @@
 		"didik",
 		"dihubungi",
 		"dipilih",
+		"Editting",
 		"grafis",
 		"handphone",
 		"hiper",
@@ -72,7 +74,9 @@
 		"lembaga",
 		"Lengkap",
 		"memperoleh",
+		"menentukan",
 		"moda",
+		"myusername",
 		"negara",
 		"netra",
 		"nisn",
@@ -90,6 +94,7 @@
 		"penghasilan",
 		"pensiunan",
 		"perempuan",
+		"pertama",
 		"peserta",
 		"petani",
 		"peternak",
@@ -113,6 +118,7 @@
 		"sosial",
 		"swasta",
 		"tahun",
+		"tandai",
 		"tanggal",
 		"teknik",
 		"telepon",
@@ -125,15 +131,10 @@
 		"tradisi",
 		"transportasi",
 		"umum",
+		"untuk",
 		"wali",
 		"wicara",
 		"wiraswasta",
-		"wirausaha",
-		"myusername",
-		"tandai",
-		"awal",
-		"untuk",
-		"pertama",
-		"menentukan"
+		"wirausaha"
 	]
 }
