--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -138,6 +138,11 @@
 		"wirausaha",
 		"silahkan",
 		"dengan",
-		"menggunakan"
+		"menggunakan",
+		"daftar",
+		"konfirmasi",
+		"batal",
+		"ubah",
+		"sama"
 	]
 }
