--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
 		"awal",
 		"bambang",
 		"baru",
+		"batal",
 		"bekerja",
 		"belajar",
 		"berkebutuhan",
@@ -28,7 +29,9 @@
 		"bulanan",
 		"buruh",
 		"calon",
+		"daftar",
 		"dari",
+		"dengan",
 		"desain",
 		"Dewantara",
 		"didik",
@@ -65,6 +68,7 @@
 		"kode",
 		"kompetensi",
 		"komputer",
+		"konfirmasi",
 		"kontak",
 		"kurang",
 		"lahir",
@@ -75,6 +79,7 @@
 		"Lengkap",
 		"memperoleh",
 		"menentukan",
+		"menggunakan",
 		"moda",
 		"myusername",
 		"negara",
@@ -110,14 +115,17 @@
 		"ringan",
 		"rumah",
 		"rungu",
+		"sama",
 		"sederajat",
 		"sekolah",
+		"silahkan",
 		"sindrome",
 		"siswa",
 		"socmed",
 		"sosial",
 		"swasta",
 		"tahun",
+		"Tambah",
 		"tandai",
 		"tanggal",
 		"teknik",
@@ -130,19 +138,12 @@
 		"tinggal",
 		"tradisi",
 		"transportasi",
+		"ubah",
 		"umum",
 		"untuk",
 		"wali",
 		"wicara",
 		"wiraswasta",
-		"wirausaha",
-		"silahkan",
-		"dengan",
-		"menggunakan",
-		"daftar",
-		"konfirmasi",
-		"batal",
-		"ubah",
-		"sama"
+		"wirausaha"
 	]
 }
